<resources>
    <string name="app_name">茶杯</string>
    <string name="user_name">gakki</string>
    <string name="about">关于</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="settings">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="item_main">主页</string>
    <string name="item_book">搜书</string>
    <string name="item_package">美图</string>
    <string name="item_news">新鲜事</string>
    <string name="item_read">阅读</string>
    <string name="item_weather">天气</string>
    <string name="input_hint">请输入需要添加的书名</string>
    <string name="input_http">请输入/粘贴视频地址</string>
    <string name="add_book">添加</string>
    <string name="search_video">搜索</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="transition_book_img">transition_book_img</string>
    <string name="transition_music_img">transition_music_img</string>
    <string name="transition_ting_img">transition_ting_img</string>
    <string name="book_content_detail">内容简介</string>
    <string name="book_author_detail">作者简介</string>
    <string name="book_table">目录</string>
    <string name="weather_change">切换</string>
    <string name="music_total_end">首</string>
    <string name="default_city">上海</string>
    <string name="refresh_net_error">联网失败, 请检查网络</string>
    <string name="not_have_more_data">没有更多的数据了…</string>
    <string name="screen_shield">抱歉, 网站将您ip屏蔽, 请换个网络重试</string>
    <string name="load_data_error">加载数据失败</string>
    <string name="music_play_pre">当前已经是第一首</string>
    <string name="load_music_error">音乐文件加载出错</string>
    <string name="unknown_name">未名</string>

    <string name="about_for_tea">茶,\n一片树叶的故事\n一道茶,就是一种人生\n一道茶,
        总会苦一阵子,\n但不会苦一辈子.\n寻茶、遇茶、品茶,\n就是寻人、遇人、品人的过程,\n
        人对了,茶就对了.\n七八年的茶之旅,终于理解,\n所谓茶道,就是在不完整的生命中感知完美,
        \n哪怕,\n只有一杯茶的时间.</string>

    <string name="about_for_detail">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;一杯茶的时间,缓慢,
        却不纠缠,泡一杯暖心茶,与岁月,与那个怜惜的人,共老,爱至无心有来生,"你若不认得我,我就说:你的茶凉了,我再去给你续上,你便知那个人是我.
        "在一杯茶中,一起活着,爱着,陪着.别等到遗憾!有些人,一旦错过就不再;有些茶,一旦错过,再遇见,已是另一番境遇.</string>

    <string name="about_for_last">请放下内心的匆忙, 端起手边的茶杯, 留一杯茶的时间给自己.</string>

    <string name="about_for_me">作者: henry li\n博客: http://blog.csdn.net/lbcab\n数据来源:\n
        落网音乐\n&#160;片刻网\n&#160;煎蛋网\n&#160;豆瓣网\n&#160;糗事百科\n&#160;第一弹</string>

    <string name="share_text">茶杯\n留一杯茶的时间给自己,读一篇文章或听一首歌,放下内心的匆忙.\n
        https://github.com/henry-blue/TeaCup</string>

    <string name="share_header">分享到</string>
    <string name="alert_dialog">提醒</string>
    <string name="music_tips_not_wifi">您当前正在使用移动网络, 继续播放将消耗流量, 如果继续请到设置里修改.</string>
    <string name="main_tips_not_wifi">您当前正在使用移动网络, 是否需要继续?</string>
    <string name="save_mobile_data">省流量模式</string>
    <string name="tip_save_data">仅在Wi-Fi环境下才会自动加载图片</string>
    <string name="tip_not_wifi">流量模式下提醒</string>
    <string name="play_play_not_wifi">非WIFI模式下播放音乐</string>
    <string name="clean_cache">清除缓存</string>
    <string name="cache_size">缓存大小: </string>
    <string name="clean_cache_finish">缓存清理完成</string>
    <string name="location_error">定位失败!请打开gps和网络尝试</string>
    <string name="file_save_tip">"文件已经保存到: "</string>
    <string name="file_not_find_tip">文件不存在!</string>
    <string name="set_theme">主题</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">全文</string>
    <string name="news_delete1">无聊图</string>
    <string name="news_delete2">后没品</string>
    <string name="video_introduce">视频介绍</string>
    <string name="related_recommend">相关推荐</string>
    <string name="parse_url_error">解析地址失败, 请重试</string>
    <string name="item_movie_more"><![CDATA[更多>>]]></string>
    <string name="tv_series">剧集</string>
    <string name="news_cache_name">newsPreloadFile.html</string>
    <string name="movies_cache_name">moviesPreloadFile.html</string>
    <string name="nothing_find">什么都没有找到~</string>
    <string name="whether_tv_tip">集</string>
    <string name="search_video_hint">搜索视频</string>

    <string-array name="tab_name">
        <item>新鲜事</item>
        <item>影视</item>
        <item>音乐期刊</item>
        <item>番剧</item>
    </string-array>
    <string-array name="tab_photo">
        <item>煎蛋妹子</item>
        <item>豆瓣妹子</item>
        <item>搞笑图片</item>
        <item>糗百18</item>
    </string-array>
    <string-array name="theme_style">
        <item>胖次蓝</item>
        <item>旱苗绿</item>
        <item>少女粉</item>
        <item>骚气黑</item>
        <item>大叔灰</item>
        <item>水鸭青</item>
        <item>姨妈红</item>
        <item>基佬紫</item>
    </string-array>
    <string-array name="video_style">
        <item>电影</item>
        <item>电视剧</item>
        <item>综艺</item>
        <item>动漫</item>
    </string-array>
</resources>
