<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_main"
            android:icon="@drawable/main_bg"
            android:title="@string/item_main" />
        <item
            android:id="@+id/navigation_item_photo"
            android:icon="@drawable/photo_bg"
            android:title="@string/item_package" />

        <item
            android:id="@+id/navigation_item_weather"
            android:icon="@drawable/weather"
            android:title="@string/item_weather" />

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/about"
            android:title="@string/item_about" />
    </group>

</menu>