<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/navigation_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_about_iv_height"
                android:scaleType="centerCrop"
                android:src="@drawable/about_header" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_about_tv_margin"
                android:lineSpacingExtra="@dimen/activity_about_tv_lineSpacing"
                android:text="@string/about_for_detail"
                android:textColor="@color/font_color"
                android:textSize="@dimen/activity_about_tv_textSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/activity_about_tv_lineSpacing"
                android:text="@string/about_for_tea"
                android:textColor="@color/font_color"
                android:textSize="@dimen/activity_about_tv_textSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_about_tv_margin"
                android:lineSpacingExtra="@dimen/activity_about_tv_lineSpacing"
                android:text="@string/about_for_last"
                android:textColor="@color/font_color"
                android:textSize="@dimen/activity_about_tv_textSize" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="@color/font_color" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_about_tv_margin"
                android:lineSpacingExtra="@dimen/activity_about_tv_lineSpacing"
                android:text="@string/about_for_me"
                android:textColor="@color/font_color"
                android:textSize="@dimen/activity_about_tv_textSize" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

